updating blood bank service layer to find blood bank by city